# tweet-pulse

./: .editorconfig  .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  get-pip.py  get-pip.py.1  pulse  pulse.py  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements-lite.txt  requirements-test.txt  requirements.txt
.github/workflows/: tests.yml
cli/: README.md  install.sh
cli/docs/: CLI_README.md  QUICK_START.md  STRUCTURE.md
cli/src/: __init__.py  main.py
data/: fake_tweets_dataset.json
docker/postgres/: README.md
docker/postgres/initdb/: 01-init-schema.sql
docs/: .lite-version-summary.md  ARCHITECTURE_V2.md  LITE_VERSION.md  QUICKSTART.md  api_flow.md  architecture_overview.md  system_context.md  worker_processing.md
docs/arch/: ingestion-arch.md
docs/dependencies/: MIGRATION_GUIDE.md
docs/features/: tier-1.md
docs/ia/: BEHAVIOR_DRIVEN_TESTING.md  README.md  REVIEW_CHECKLIST.md  TESTING_GUIDE.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
scripts/: bootstrap.sh  init_redis.py  setup_redis.py
scripts/test/: basic_test.py  run_tests.sh  simple_test_runner.py  test_stream_integration.py
src/tweetpulse/: __init__.py  main.py  worker.py
tests/test_integration/: __init__.py  conftest.py  test_batch_writer_integration.py  test_consumer_integration.py  test_deduplication_integration.py  test_enrichment_integration.py  test_enrichment_lite.py  test_pipeline_integration.py  test_storage_integration.py
(+57 files in other folders)
